--- a/.env.local.example
+++ b/.env.local.example
@@ -1,2 +1,8 @@
 
-DATABASE_URL="postgresql://postgre:12345@localhost:5432/postgre"
+DATABASE_URL="postgresql://postgre:postgre@localhost:5432/postgre"
+
+# jwt token 
+ACCESS_TOKEN_SECRET=''
+ACCESS_TOKEN_EXPIRY='2d'
+REFRESH_TOKEN_EXPIRY='7d'
+REFRESH_TOKEN_SECRET=''
