--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,5 @@ dist
 # End of https://mrkandreev.name/snippets/gitignore-generator/#Node
 /src/generated/prisma
 .env.local
+
+/src/generated/prisma
