--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@blocknote/mantine": "^0.42.3",
     "@blocknote/react": "^0.42.3",
     "@hookform/resolvers": "^5.2.2",
+    "@langchain/textsplitters": "^1.0.0",
     "@prisma/adapter-pg": "^7.0.0",
     "@prisma/client": "^7.0.0",
     "@prisma/extension-accelerate": "^2.0.2",
@@ -34,6 +35,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "inngest": "^3.46.0",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
