--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@blocknote/core": "^0.42.3",
     "@blocknote/mantine": "^0.42.3",
     "@blocknote/react": "^0.42.3",
+    "@google/genai": "^1.30.0",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.2",
     "@langchain/textsplitters": "^1.0.0",
     "@prisma/adapter-pg": "^7.0.0",
