--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@blocknote/react": "^0.42.3",
     "@google/genai": "^1.30.0",
     "@hookform/resolvers": "^5.2.2",
+    "@langchain/core": "^1.1.0",
+    "@langchain/google-genai": "^2.0.0",
+    "@langchain/qdrant": "^1.0.1",
     "@langchain/textsplitters": "^1.0.0",
     "@prisma/adapter-pg": "^7.0.0",
     "@prisma/client": "^7.0.0",
@@ -40,6 +43,7 @@
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
+    "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
