--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,10 @@
+NODE_ENV='development';
+# DATABASE 
+TB_DATABASE_URL="add here"
 
-DATABASE_URL="postgresql://postgre:postgre@localhost:5432/postgre"
+# QDRANT DB 
+TB_QDRANT_HOST=""
+TB_QDRANT_API_KEY=""
 
+# EMBEDDING API KEY 
+TB_GEMINI_API_KEY=""
