--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "groq-sdk": "^0.37.0",
     "inngest": "^3.46.0",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
